# ASDfR---Assignment3_ros_ws

./: .gitignore  build_pi_3.sh  build_pi_3_1.sh  build_pi_3_2.sh  build_pi_3_3.sh  log_test.mat  rotation_3_3.mat  x_output.txt
.claude/: settings.local.json
install/: local_setup.sh  setup.sh
install/assignment1_1/share/assignment1_1/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/assignment1_2/include/: setpoint_generator.hpp
install/assignment1_2/share/assignment1_2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/assignment3_1/share/assignment3_1/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cam2image_vm2ros/lib/cam2image_vm2ros/: cam2image
install/cam2image_vm2ros/share/cam2image_vm2ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/image_tools/lib/image_tools/: cam2image
install/image_tools/share/image_tools/: local_setup.sh  package.sh  package.xml
install/object_tracker/include/: object_tracker.hpp
install/object_tracker/lib/object_tracker/: object_tracker
install/object_tracker/share/object_tracker/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/relbot_adapter/share/relbot_adapter/: local_setup.sh  package.sh
install/relbot_msgs/share/relbot_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
install/relbot_simulator/share/relbot_simulator/: package.sh
install/sequence_controller/share/sequence_controller/: local_setup.sh  package.sh
launch/: launch_RELbot_brightness_tracker.py  launch_RELbot_sim.py
log/: .gitignore  latest_build
src/assignment1_1/: CMakeLists.txt  README.md
src/assignment1_1/launch/: launch_RELbot_brightness_tracker.py
src/assignment1_1/src/: brightness_receiver.cpp  image_brightness.cpp  object_position_indicator.cpp
src/assignment1_2/: CMakeLists.txt  README.md
src/assignment1_2/src/: setpoint_generator.cpp
src/assignment3_1/: CMakeLists.txt  README.md  README_object_tracker.md  README_setpoint_generator.md  package.xml
src/assignment3_1/include/: object_tracker.hpp  setpoint_generator.hpp
src/assignment3_1/launch/: launch_tracker_sim.py
src/assignment3_1/src/: object_tracker.cpp
src/assignment3_2/: CMakeLists.txt  Just_the_two_of_us.md  README.md  main.cpp  package.xml
src/assignment3_2/controller/: LoopController.cpp  LoopController.h  LoopController.info  LoopController_tokens.xml  test_LoopController.cpp
src/assignment3_2/controller/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
src/assignment3_2/include/: XRF2_FRT_test.hpp  XRF2_SRT_unit_test.hpp
src/assignment3_2/src/: XRF2_FRT_test.cpp
src/assignment3_2_unit_test/: CMakeLists.txt  README.md  package.xml
src/assignment3_2_unit_test/include/: XRF2_SRT_unit_test.hpp
src/assignment3_2_unit_test/launch/: unit_test.py
src/assignment3_2_unit_test/src/: XRF2_SRT_unit_test.cpp
src/assignment3_3/: CMakeLists.txt  Just_the_two_of_us.md  README.md
src/assignment3_3/controller/: LoopController.cpp  LoopController.h  LoopController_tokens.xml  test_LoopController.cpp
src/assignment3_3/controller/common/: EulerAngles.cpp  EulerAngles.h  MotionProfiles.cpp  MotionProfiles.h  xxfuncs.cpp  xxfuncs.h  xxinteg.cpp  xxinteg.h  xxinverse.cpp  xxinverse.h  xxmatrix.cpp  xxmatrix.h  xxmodel.h  xxtypes.h
src/assignment3_3/include/: XRF2_FRT_test.hpp  XRF2_SRT_drive_test.hpp  XRF2_SRT_unit_test.hpp
src/assignment3_3/src/: XRF2_FRT_test.cpp  XRF2_SRT_drive_test.cpp  XRF2_SRT_unit_test.cpp
src/assignment3_3_srt/: CMakeLists.txt  README.md  package.xml
src/assignment3_3_srt/include/: XRF2_SRT_drive_test.hpp
src/assignment3_3_srt/launch/: drive_test.py  start_bridge.py
src/assignment3_3_srt/src/: XRF2_SRT_drive_test.cpp
src/cam2image_vm2ros/: CHANGELOG.md  CMakeLists.txt:Zone.Identifier
src/cam2image_vm2ros/config/: cam2image.yaml
src/frt_testbed/: CMakeLists.txt  README.md  package.xml
src/frt_testbed/config/: patterns.yaml
src/frt_testbed/include/frt_testbed/: frt_testbed_node.hpp
src/frt_testbed/launch/: frt_passthrough_test.launch.py
src/frt_testbed/src/: frt_testbed_node.cpp
src/image_tools/: CMakeLists.txt  README.md
src/image_tools/config/: cam2image.yaml
src/image_tools/include/: cam2image.hpp
src/image_tools/src/: cam2image.cpp
src/object_tracker/: CMakeLists.txt  readme.md
src/object_tracker/include/: object_tracker.hpp
src/object_tracker/launch/: assignment3_1_simulation_test.py  assignment3_1_simulation_test_local.py
src/object_tracker/src/: object_tracker.cpp
src/relbot_adapter/include/: relbot_adapter.hpp
src/relbot_adapter/src/: relbot_adapter.cpp
src/sequence_controller/: CMakeLists.txt
src/sequence_controller/launch/: sequence_controller.launch.py
src/sequence_controller/src/: sequence_controller.cpp
(+43 files in other folders)
