<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frt_testbed</name>
  <version>0.0.0</version>
  <description>
    SRT test bed for the XRF2 FRT pass-through (Assignment 3.2). Publishes
    parameter-selectable test patterns on Ros2Xeno, drives the XRF2 state
    machine over XenoCmd, and records Xeno2Ros / XenoState feedback to a CSV.
  </description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xrf2_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
